<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smb_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo simulation for SMB</description>
  <maintainer email="koen.kraemer@mavt.ethz.ch">Koen Kraemer</maintainer>
  <license>Proprietary</license>
  <url type="website">https://bitbucket.org/leggedrobotics/smb_common</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>ros_gz_sim</depend>
  <exec_depend>smb_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_plugin_path="${prefix}/lib" gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>